Adjusted skill list spacing fixes #2

--- a/app/_sass/4-elements/e--typography.scss
+++ b/app/_sass/4-elements/e--typography.scss
@@ -44,10 +44,5 @@ li {
   font-size: $font-size4;
   font-weight: $font-regular;
   line-height: 1.5;
-}
-
-@include bp-large {
-  p {
-    max-width: $max-width7;
-  }
+  max-width: 40rem;
 }
